--- a/public/1stGraded.html
+++ b/public/1stGraded.html
@@ -1,38 +1,124 @@
 <!DOCTYPE html>
-    <html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3.5 musketeers CR decks</title>
+  <link rel="stylesheet" href="style.css"> 
+
+  <link rel="icon" type="image/png" href="favicon.png">
+  <style>
+    @font-face {
+      font-family: "myFont";
+      src: url("Clash-Royale-Font/You Blockhead.ttf") format("truetype"); 
+    }
+    table, th, td {
+  border:1px solid black;
+}
+  </style>
+</head>
+<body>
 
 
-    <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="1st Graded Exercise">
-    <meta name="keywords" content="CR decks">
-    <meta name="author" content="Jarod Cajustin">
+  <div class="main">
 
-        <title>3.5 musketeers CR decks</title>
+    <div class="navbar">
+      <ul>
+        <li> <a href="../index.html"> Home</a></li>
+        <li><a href="#">Napc's deck</a></li>
+        <li><a href="#">Uno's deck</a></li>
+        <li><a href="https://benedictserra.github.io/CS3_2NDQTRPORTFOLIO/public/1stGraded.html">Ben's deck</a></li>
+      </ul>
+    </div>
+  </div>
 
-            <style>
-                body {
-                    background-image: url('https://tse1.mm.bing.net/th/id/OIP.VIyIZ2z12x3EOSu582WqCQHaI4?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3');
-                    background-size: cover;
-                    background-repeat: no-repeat;
-                }
-            </style>
-        </head>
+  <div class="background">
+    <div class="box">
+      <h1>3.5 musketeers CR decks</h1>
+      <p>
+       In this project you can see the different decks that we use in the game CLash Royale. Our differences in decks highlight the different play styles and different approaches we have to the game. Even though we have different decks, we are united by the love of the game and the fun we share while playing it!
 
-        <body>
-            <ul>
-                <li><a href="/public/index.html">Home</a></li>
-            </ul>
+      <h2>Jarod's deck</h2>
+      <p>
+        The image below is my deck. It is commonly refered to as "Hogs EQ" and I 
+     <img src="deck.jpg" alt="My deck" class="training-img">
 
+     <h3>W/L ratio of this deck from October 6 - 12</h3>
 
+<table style="width:100%">
+  <tr>
+    <th></th>
+    <th>Monday</th>
+    <th>Tuesday</th>
+    <th>Wednesday</th>
+    <th>Thursday</th>
+    <th>Friday</th>
+    <th>Saturday</th>
+    <th>Sunday</th>
+  </tr>
+  <tr>
+    <td>Wins</td>
+    <td>4</td>
+    <td>2</td>
+    <td>7</td>
+    <td>3</td>
+    <td>5</td>
+    <td>9</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td style="color: red;">Loses</td>
+    <td style="color: red;">8</td>
+    <td style="color: red;">5</td>
+    <td style="color: red;">1</td>
+    <td style="color: red;">2</td>
+    <td style="color: red;">4</td>
+    <td style="color: red;">4</td>
+    <td style="color: red;">1</td>
+  </tr>
+  <tr>
+    <td style="color: green;">Total</td>
+    <td style="color: green;">12</td>
+    <td style="color: green;">7</td>
+    <td style="color: green;">8</td>
+    <td style="color: green;">5</td>
+    <td style="color: green;">9</td>
+    <td style="color: green;">13</td>
+    <td style="color: green;">4</td>
+  </tr>
 
+  <tr>
+    <td style="color: blue;"> Win%</td>
+    <td style="color: blue;"> 33.33%</td>
+    <td style="color: blue;">28.57%</td>
+    <td style="color: blue;">87.5%</td>
+    <td style="color: blue;">60.0%</td>
+    <td style="color: blue;">55.55%</td>
+    <td style="color: blue;">69.23%</td>
+    <td style="color: blue;">75.0%</td>
+  </tr>
+</table>
+<br><br>
 
-        </body>
+     <p style="color:rgb(117, 0, 0);">
+        *Although it's important to have a main deck, it's just as important to learn and study new ones. This is because some decks may not work as well in higher arenas. Another reason is that learning the more meta decks can help you understand how to counter them when you face opponents who use them.
+        Below is a video tutorial on how to play and improve in clash royale in case anyone is interested.
+     </p>
+      <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/4fL5-S7zMfw"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+  </div>
 
-
-
-
-
-
-    </html>
+  <footer>
+  <p>© 2025 Clash Royale. All rights reserved.</p>
+</footer>
+</body>
+</html>
+YouTube
+SolarFury
+The ULTIMATE Clash Royale Free To Play Guide
+Image
