--- a/public/1stGraded.html
+++ b/public/1stGraded.html
@@ -25,8 +25,8 @@
     <div class="navbar">
       <ul>
         <li> <a href="../index.html"> Home</a></li>
-        <li><a href="#">Napc's deck</a></li>
-        <li><a href="#">Uno's deck</a></li>
+        <li><a href="https://nathancabanero.github.io/CS3_2NDQTRPORTFOLIO/public/Q21GBerylliumCabanero.html">Napc's deck</a></li>
+        <li><a href="https://juanmarqueses.github.io/CS3_2NDQTRPORTFOLIO/public/Q21GMarqueses.html">Uno's deck</a></li>
         <li><a href="https://benedictserra.github.io/CS3_2NDQTRPORTFOLIO/public/1stGraded.html">Ben's deck</a></li>
       </ul>
     </div>
@@ -40,7 +40,7 @@
 
       <h2>Jarod's deck</h2>
       <p>
-        The image below is my deck. It is commonly refered to as "Hogs EQ" and I 
+        The image below is my deck. It is commonly refered to as "Hogs EQ" (EQ stands for Earthquake), and there isn't really a specific reason as to why I use it, I just kept changing my deck and ended up with this. This deck is good because of it's low average elixir cost, which allows for fast-paced plays with the hogrider and earthquake to clear out towers and swarms, as well as cheap defense against higher elixir cards. This type of playstyle is my preferred one, and until I find something more fit for me, Hogs EQ will be my choice.
      <img src="deck.jpg" alt="My deck" class="training-img">
 
      <h3>W/L ratio of this deck from October 6 - 12</h3>
@@ -58,54 +58,53 @@
   </tr>
   <tr>
     <td>Wins</td>
+    <td>6</td>
     <td>4</td>
+    <td>3</td>
     <td>2</td>
+    <td>6</td>
     <td>7</td>
-    <td>3</td>
-    <td>5</td>
-    <td>9</td>
-    <td>3</td>
+    <td>2</td>
   </tr>
   <tr>
     <td style="color: red;">Loses</td>
-    <td style="color: red;">8</td>
+    <td style="color: red;">7</td>
     <td style="color: red;">5</td>
-    <td style="color: red;">1</td>
-    <td style="color: red;">2</td>
+    <td style="color: red;">5</td>
     <td style="color: red;">4</td>
-    <td style="color: red;">4</td>
-    <td style="color: red;">1</td>
+    <td style="color: red;">5</td>
+    <td style="color: red;">3</td>
+    <td style="color: red;">3</td>
   </tr>
   <tr>
     <td style="color: green;">Total</td>
-    <td style="color: green;">12</td>
-    <td style="color: green;">7</td>
-    <td style="color: green;">8</td>
-    <td style="color: green;">5</td>
-    <td style="color: green;">9</td>
     <td style="color: green;">13</td>
-    <td style="color: green;">4</td>
+    <td style="color: green;">9</td>
+    <td style="color: green;">8</td>
+    <td style="color: green;">6</td>
+    <td style="color: green;">11</td>
+    <td style="color: green;">10</td>
+    <td style="color: green;">5</td>
   </tr>
 
   <tr>
     <td style="color: blue;"> Win%</td>
-    <td style="color: blue;"> 33.33%</td>
-    <td style="color: blue;">28.57%</td>
-    <td style="color: blue;">87.5%</td>
-    <td style="color: blue;">60.0%</td>
-    <td style="color: blue;">55.55%</td>
-    <td style="color: blue;">69.23%</td>
-    <td style="color: blue;">75.0%</td>
+    <td style="color: blue;">46.15%</td>
+    <td style="color: blue;">44.44%</td>
+    <td style="color: blue;">37.50%</td>
+    <td style="color: blue;">33.33%</td>
+    <td style="color: blue;">54.55%</td>
+    <td style="color: blue;">70.00%</td>
+    <td style="color: blue;">40.00%</td>
   </tr>
 </table>
 <br><br>
 
      <p style="color:rgb(117, 0, 0);">
-        *Although it's important to have a main deck, it's just as important to learn and study new ones. This is because some decks may not work as well in higher arenas. Another reason is that learning the more meta decks can help you understand how to counter them when you face opponents who use them.
-        Below is a video tutorial on how to play and improve in clash royale in case anyone is interested.
+        *My groupmates already said this, but I will repeat because it is very important. Some decks work better based on your current arena, so it is good to experiment with other decks. However, if you're f2p like me, then you won't have enough resources immediately to level up all of your cards. If you spread your resources too far, it will hinder your accounts progress. So instead, you should only make little tweaks to the deck you are currently using, and see if these tweaks will help against your newer, stronger opponents. Once you have gotten to the stage where you DO have enough resources, that is when you can invest in completely new decks. If u wanna Hogs EQ, I linked a good guide I found on Youtube for it. (IGNORE THIS IF UR A WHALE)
      </p>
-      <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/4fL5-S7zMfw"
+      <iframe width="560" height="290"
+    src="https://www.youtube.com/embed/ck5ADUQWQ2U"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -118,7 +117,7 @@
 </footer>
 </body>
 </html>
-YouTube
-SolarFury
-The ULTIMATE Clash Royale Free To Play Guide
+YouTube:
+Extra Ian77 - 
+Hog EQ Guide: Tips & Tricks
 Image
